<resources>
    <string name="app_name">Mapas do Metrô do Mundo</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1098336821710456/5953523391</string>
    <string name="banner_ad_unit_TESTE" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1098336821710456~6894359536</string>
    <string name="title_activity_admob" translatable="false">AdmobActivity</string>
    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level" translatable="false">Next Level</string>
    <string name="interstitial_ad_unit_id_TESTE" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-1098336821710456/5734031546</string>
    <string name="tvFirstMessage">Selecione uma região para visualizar os mapas</string>
    <string name="Africa_button">África</string>
    <string name="America_button">América</string>
    <string name="NorthAmerica_List">América do Norte</string>
    <string name="SouthAmerica_List">América do Sul</string>
    <string name="CentralAmerica_List">América Central</string>
    <string name="Asia_button">Asia</string>
    <string name="Europe_button">Europa</string>
    <string name="Oceania_button">Oceania</string>
    <string name="Default_button">Mapa Padrão</string>
    <string name="brazil">Brasil</string>
    <string name="maceio">Maceió</string>
    <string name="recife" translatable="false">Recife</string>
    <string name="brasilia">Brasilia</string>
    <string name="jo_o_pessoa">João Pessoa</string>
    <string name="natal" translatable="false">Natal</string>
    <string name="belo_horizonte" translatable="false">Belo Horizonte</string>
    <string name="rio_de_janeiro" translatable="false">Rio de Janeiro</string>
    <string name="fortaleza" translatable="false">Fortaleza</string>
    <string name="salvador" translatable="false">Salvador</string>
    <string name="porto_alegre" translatable="false">Porto Alegre</string>
    <string name="teresina" translatable="false">Teresina</string>
    <string name="buenos_aires" translatable="false">Buenos Aires</string>
    <string name="cidade_do_cabo">Cidade do Cabo</string>
    <string name="durban" translatable="false">Durban</string>
    <string name="johannesburg_pretoria" translatable="false">Johannesburgo</string>
    <string name="east_london_port_elisabeth" translatable="false">East London</string>
    <string name="cairo" translatable="false">Cairo</string>
    <string name="egito">Egito</string>
    <string name="tunisia" translatable="false">Tunisia</string>
    <string name="tunis" translatable="false">Tunis</string>
    <string name="canada">Canadá</string>
    <string name="calgary" translatable="false">Calgary</string>
    <string name="edmonton" translatable="false">Edmonton</string>
    <string name="montreal" translatable="false">Montreal</string>
    <string name="ottawa" translatable="false">Ottawa</string>
    <string name="toronto" translatable="false">Toronto</string>
    <string name="vancouver" translatable="false">Vancouver</string>
    <string name="mexico" translatable="false">Mexico</string>
    <string name="cidade_do_mexico">Cidade do Mexico</string>
    <string name="monterrey" translatable="false">Monterrey</string>
    <string name="guadalajara" translatable="false">Guadalajara</string>
    <string name="argentina" translatable="false">Argentina</string>
    <string name="africa_do_sul">Africa do Sul</string>
    <string name="exibir_na_tela_inicial_mapa_padr_o">Exibir na tela inicial (Mapa Padrão)</string>
    <string name="chile" translatable="false">Chile</string>
    <string name="colombia">Colômbia</string>
    <string name="peru" translatable="false">Peru</string>
    <string name="venezuela" translatable="false">Venezuela</string>
    <string name="estados_unidos">Estados Unidos</string>
    <string name="panama">Panamá</string>
    <string name="porto_rico">Porto Rico</string>
    <string name="republica_dominicana">República Dominicana</string>
    <string name="sao_paulo" translatable="false">São Paulo</string>
    <string name="santiago" translatable="false">Santiago</string>
    <string name="valparaiso" translatable="false">Valparaíso</string>
    <string name="lima" translatable="false">Lima</string>
    <string name="medelin" translatable="false">Medelin</string>
    <string name="valencia" translatable="false">Valência</string>
    <string name="maracaibo" translatable="false">Maracaíbo</string>
    <string name="caracas" translatable="false">Caracas</string>
    <string name="santo_domingo" translatable="false">Santo Domingo</string>
    <string name="san_juan" translatable="false">San Juan</string>
    <string name="dubai" translatable="false">Dubai</string>
    <string name="india">Índia</string>
    <string name="emirados_arabes">Emirados Arábes Unidos</string>
    <string name="mumbai" translatable="false">Mumbai</string>
    <string name="delhi" translatable="false">Delhi</string>
    <string name="calcuta">Calcutá</string>
    <string name="inglaterra">Inglaterra</string>
    <string name="espanha">Espanha</string>
    <string name="australia">Austrália</string>
    <string name="nova_zelandia">Nova Zelândia</string>
    <string name="manchester" translatable="false">Manchester</string>
    <string name="londres">Londres</string>
    <string name="sevilha">Sevilha</string>
    <string name="madrid">Madri</string>
    <string name="barcelona" translatable="false">Barcelona</string>
    <string name="lisboa">Lisboa</string>
    <string name="portugal" translatable="false">Portugal</string>
    <string name="amsterdam">Amsterdã</string>
    <string name="rotterdam">Roterdã</string>
    <string name="holanda">Holanda</string>
    <string name="marselha">Marselha</string>
    <string name="paris" translatable="false">Paris</string>
    <string name="franca">França</string>
    <string name="sydney" translatable="false">Sydney</string>
    <string name="melbourne" translatable="false">Melbourne</string>
    <string name="abu_dhabi" translatable="false">Abu Dhabi</string>
    <string name="suica">Suiça</string>
    <string name="zurich">Zurique</string>
    <string name="moscow">Moscou</string>
    <string name="kiev" translatable="false">Kiev</string>
    <string name="berlim" translatable="false">Berlim</string>
    <string name="viena" translatable="false">Viena</string>
    <string name="copenhague" translatable="false">Copenhague</string>
    <string name="helsinki" translatable="false">Helsinki</string>
    <string name="milao">Milão</string>
    <string name="roma">Roma</string>
    <string name="estocolmo">Estocolmo</string>
    <string name="russia">Rússia</string>
    <string name="ukrania">Ucrânia</string>
    <string name="alemanha">Alemanha</string>
    <string name="austria" translatable="false">Austria</string>
    <string name="dinamarca">Dinamarca</string>
    <string name="finlandia">Finlândia</string>
    <string name="italia">Itália</string>
    <string name="suecia">Suécia</string>
    <string name="map_info_message">Use os dedos ou dê dois toques na tela para dar o ZOOM no mapa</string>
    <string name="auckland" translatable="false">Auckland</string>
    <string name="washington" translatable="false">Washington</string>
    <string name="seattle" translatable="false">Seattle</string>
    <string name="sao_francisco">São Francisco</string>
    <string name="nova_york">Nova Iorque</string>
    <string name="miami" translatable="false">Miami</string>
    <string name="los_angeles" translatable="false">Los Angeles</string>
    <string name="las_vegas" translatable="false">Las Vegas</string>
    <string name="houston" translatable="false">Houston</string>
    <string name="detroit" translatable="false">Detroit</string>
    <string name="chicago" translatable="false">Chicago</string>
    <string name="boston" translatable="false">Boston</string>
    <string name="baltimore" translatable="false">Baltimore</string>
    <string name="atlanta" translatable="false">Atlanta</string>
    <string name="shanghai">Xangai</string>
    <string name="shenzhen" translatable="false">Shenzhen</string>
    <string name="beijing">Pequin</string>
    <string name="guangzhou" translatable="false">Guangzhou</string>
    <string name="china" translatable="false">China</string>
    <string name="arabia_saudita">Arábia Saudita</string>
    <string name="mecca" translatable="false">Mecca</string>
    <string name="hongkong" translatable="false">Hong Kong</string>
    <string name="yokohama" translatable="false">Yokohama</string>
    <string name="tokyo">Tóquio</string>
    <string name="nagoya">Nagóia</string>
    <string name="japao">Japão</string>
    <string name="istambul" translatable="false">Istambul</string>
    <string name="ankara" translatable="false">Ankara</string>
    <string name="turquia">Turquia</string>
    <string name="taipei" translatable="false">Taipei</string>
    <string name="seoul" translatable="false">Seoul</string>
    <string name="singapura">Singapura</string>
    <string name="southkorea">Coreia do Sul</string>
    <string name="taiwan" translatable="false">Taiwan</string>
    <string name="cidade_do_panama">Cidade do Panamá</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>